<resources>
    <string name="app_name">Medic Reminder</string>
    <string name="home">Home</string>
    <string name="medications">Medications</string>
    <string name="settings">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="addbutt">addMedic</string>

    <string name="web_client">541607280272-ici76tipfj9bu9sh9brq33cd4qda9jls.apps.googleusercontent.com</string>
    <string name="registerbtn">Sign Up</string>
    <string name="confirmPassword">Confirm password</string>
    <string name="btn_login_text">Login</string>
    <string name="forgetPassword">Forgetting password</string>
    <string name="send_email">Send Email</string>


    <string name="medicineName">medicament name</string>
    <string name="medicineNamehint">Write the name of the medical or commercial drug</string>
    <string name="nextBtn">Next</string>
    <string name="remindertimes">reminder times</string>
    <string name="drugQuantaty">What dose did you take / how often did you take it?</string>
    <string-array name="time">
        <item>frequency of repetition</item>
        <item>once a day</item>
        <item>twice daily</item>
        <item>Three times a day</item>
        <item>four times a day</item>
        <item>five times a day</item>
        <item>six times a day</item>
        <item>seven times a day</item>
        <item>eight times a day</item>
        <item>nine times a day</item>
        <item>eleven times a day</item>
        <item>tweleve times a day</item>
        <item>every number of hours</item>
        <item>every 12 hours</item>
        <item>every 8 hours</item>
        <item>every 6 hours</item>
        <item>every 4 hours</item>
        <item>every 3 hours</item>
        <item>every 2 hours</item>
        <item>every hour</item>
    </string-array>
    \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
    <string-array name="measure">
        <item>g</item>
        <item>mcg</item>
        <item>mcg/ml</item>
        <item>mEq</item>
        <item>mc/ml</item>
        <item>mc/ml</item>
    </string-array>
    \\\\\\\\\\\\\\\\\\\\\
    <string-array name="amount">
        <item>Usage(s)</item>
        <item>tube(s)</item>
        <item>probe(s)</item>
        <item>Cartridge(s)</item>
        <item>vessel(s)</item>
        <item>cup(s)</item>
        <item>drop(s)</item>
        <item>milli</item>
        <item>syringe(s)</item>
        <item>nine times a day</item>
        <item>eleven times a day</item>
        <item>tweleve times a day</item>
        <item>every number of hours</item>
        <item>every 12 hours</item>
        <item>every 8 hours</item>
        <item>every 6 hours</item>
        <item>every 4 hours</item>
        <item>every 3 hours</item>
        <item>every 2 hours</item>
        <item>every hour</item>
    </string-array>
    ///////////////////////////////////////

    //////////////////////////////////
    <string name="scheduling">scheduling</string>
    <string name="startingdate">starting date :</string>
    <string name="selectdate">Select date</string>
    <string name="medicinesymbol">medicine symbol</string>
    <string name="strength">strength</string>
    <string name="severityofmedication">severity of medication :</string>
    <string name="Presstoadjust">Press to adjust</string>
    <string name="medicine_taken">Should this medicine be taken while eating?</string>
    <string name="beforeating">before eating</string>
    <string name="aftereating">after eating</string>
    <string name="whileeating">while eating</string>
    <string name="doesnotmatter">does not matter</string>
    <string name="refillamount">Enter the quantity of medication you have now to receive a reminder to fill the medication</string>
    <string name="Fillingtheprescription">Filling the prescription></string>
    <string name="Amountofmedicine">Amount of medicine</string>
    <string name="Aremindertofillthemedicine">A reminder to fill the medicine</string>
    <string name="WhenIhaveleft">When I have left</string>
    <string name="selectamaount">select Amount</string>
    <string name="atanytime">at any time?</string>
    <string name="selctTime">select time</string>
    <string name="moreopitionsBtn">more opitions</string>
    <string name="suspendBtnDisplay">Suspend</string>
    <string name="refillBtnDisplay">Refill</string>
    <string name="Adddose">ADD DOSE</string>
    <string name="refillremindermsg">Medicine filling reminder</string>
    <string name="reciveRefillnotification">When any number of medicines you want to receive a packing notification</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="done">done</string>
    <string name="new_user">New User?</string>
    <string name="creat_account">Creat Account</string>
    <string name="already_have_login">Login</string>
    <string name="already_have_account_login">Already Have Account?</string>


    <string name="appName">Medical Reminder</string>
    <string name="login">Login</string>
    <string name="login_with">Or Login With</string>
    <string name="tuskkan">Tuskkan</string>
    <string name="_500_mg">500 mg</string>
    <string name="_1_left">1 left</string>
    <string name="added_by_azza">added by Azza</string>
    <string name="azza_helmy">Azza Helmy</string>
    <string name="is_invited_you_to_take_care_of_her">is invited you to take care of her</string>
</resources>