<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_500"
    tools:context=".login.view.LoginActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/app_color"
        tools:context=".login.view.LoginActivity"

        >

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/app_icon"

            android:layout_width="200dp"
            android:layout_height="120dp"
            android:layout_marginTop="24dp"
            android:gravity="bottom"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/appName"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_icon"

            />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="40dp"
            app:cardPreventCornerOverlap="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@id/app_name">


            <LinearLayout

                android:id="@+id/linear_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/app_name"

                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <TextView
                        android:id="@+id/have_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/new_user"
                        android:textColor="@color/black"
                        android:textSize="16sp"

                        android:textStyle="normal"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="start"

                        android:onClick="openRegister"
                        android:text="@string/creat_account"
                        android:textColor="@color/purple_700"
                        android:textSize="16sp"
                        android:textStyle="normal" />
                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    app:errorEnabled="true">


                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/email_hint"
                        android:inputType="textEmailAddress|textMultiLine"

                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_password"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:endIconMode="password_toggle"
                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"


                    >


                    <com.google.android.material.textfield.TextInputEditText

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password_hint"
                        android:inputType="textPassword|textMultiLine"


                        />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/btn_forgettingPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="48dp"
                    android:layout_marginTop="4dp"
                    android:onClick="onForgetPasswordClick"
                    android:text="@string/forgetPassword"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/button_background"
                    android:onClick="onLoginClick"
                    android:text="@string/btn_login_text"

                    android:textColor="@color/white"
                    android:textSize="16sp" />


                <TextView
                    android:id="@+id/login_with"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:text="@string/login_with" />

                <LinearLayout
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="32dp"

                    >

                    <ImageView
                        android:id="@+id/btn_google"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:background="@color/white"
                        android:onClick="loginWithGoogle"
                        android:src="@drawable/google_plus" />

                    <ImageView
                        android:id="@+id/btn_facebook"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="16dp"
                        android:background="@color/white"
                        android:onClick="loginWithGoogle"
                        android:src="@drawable/facebook_icon" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>







